bugfix/dossier/added configuration parameters